add ORM trials for fetching data from db

--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -6,7 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>Welcome to Playground {{name}}</h1>
+    
+    <ul>
+        {% for product in products %}
+        
+            <li>{{ product.title }}</li>
+        
+        {% endfor %}
+    </ul>
 </body>
 </html>
 
