--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -12,7 +12,7 @@
     <ul>
         {% for product in products %}
         
-            <li>{{ product.title }}</li>
+            <li>{{ product }}</li>
         
         {% endfor %}
     </ul>
